--- a/src/component/ZiltagComment/index.css
+++ b/src/component/ZiltagComment/index.css
@@ -32,7 +32,7 @@
   font-size: 14px;
   line-height: 20px;
   white-space: pre-line;
-  word-break: break-all;
+  word-wrap: break-word;
   color: rgba(0, 0, 0, .87);
 }
 
@@ -95,6 +95,7 @@
 
 .ziltag-ziltag-comment .ziltag-ziltag-comment__main {
   width: 100%;
+  min-width: 0;
 }
 
 .ziltag-ziltag-comment__main .ziltag-ziltag-comment__text {
