--- a/src/component/ZiltagContent/index.css
+++ b/src/component/ZiltagContent/index.css
@@ -11,7 +11,7 @@
   font-size: 14px;
   line-height: 24px;
   white-space: pre-line;
-  word-break: break-all;
+  word-wrap: break-word;
   color: rgba(0, 0, 0, .87);
 }
 
