--- a/src/component/ZiltagPreview/index.css
+++ b/src/component/ZiltagPreview/index.css
@@ -8,7 +8,7 @@
 .ziltag-ziltag-preview__content {
   width: calc(100% - 38px - 14px);
   height: 30px;
-  word-break: break-all;
+  word-wrap: break-word;
   overflow: hidden;
 }
 
